# Norolog

./: .gitignore  README.md  build.gradle.kts  settings.gradle.kts
src/main/kotlin/com/momid/: Info.kt
src/main/kotlin/com/momid/compiler/: ArrayAccess.kt  ArrayInitialization.kt  Assignment.kt  CClassInterop.kt  CCodeBlock.kt  CCompiler.kt  CF.kt  CFunctionInterop.kt  Class.kt  ClassFunction.kt  ClassFunctionCall.kt  ClassInitialization.kt  CodeBlock.kt  CodeCompiler.kt  CodeGeneration.kt  CurrentGeneration.kt  ExpressionToText.kt  For.kt  Function.kt  FunctionCall.kt  FunctionDeclaration.kt  GClass.kt  GClassInitialization.kt  Info.kt  InfoAccess.kt  Lambda.kt  Main.kt  NorologInC.kt  Parser.kt  PropertyAccess.kt  PropertyAccessStatement.kt  Reference.kt  ReferenceAccess.kt  Return.kt  Rule.kt  Scope.kt  SourceGeneration.kt  Split.kt  Statement.kt  Type.kt  (+1 more)
src/main/kotlin/com/momid/compiler/directory/: Root.kt
src/main/kotlin/com/momid/compiler/discover/: FunctionDiscover.kt
src/main/kotlin/com/momid/compiler/output/: Class.kt  Function.kt  GenericUtils.kt  Info.kt  List.kt  Rule.kt  Scope.kt  Type.kt  TypeUtils.kt
src/main/kotlin/com/momid/compiler/packaging/: Root.kt
src/main/kotlin/com/momid/compiler/standard_library/: BuiltInClasses.kt  BuiltInFunctions.kt  CodeGeneration.kt  Graphics.kt
src/main/kotlin/com/momid/parser/: ExpressionParser.kt  Regex.kt  StructureFinderUsage.kt  parser.kt
src/main/resources/: CMakeLists.txt  source.momid
src/test/kotlin/com/momid/compiler/: PropertyAccessStatementKtTest.kt
(+15 files in other folders)
